syntax = "proto3";

package hyperterse;

option go_package = "github.com/hyperterse/hyperterse/core/proto/hyperterse";

// Import connector and primitive types
import "proto/connectors/connectors.proto";
import "proto/primitives/primitives.proto";

// Server Configuration
message ServerConfig {
  string port = 1; // Server port (default: "8080")
  int32 log_level = 2; // Log level: 1=ERROR, 2=WARN, 3=INFO, 4=DEBUG (default: 3)
}

// Top-level container for the DSL
message Model {
  repeated Adapter adapters = 1;
  repeated Query queries = 2;
  ServerConfig server = 3; // Optional server configuration
}

// Adapter Configuration
message Adapter {
  string name = 1; // e.g., "my_pg1" - must be lower-kebab-case or lower_snake_case, required
  Connector connector = 2; // e.g., CONNECTOR_POSTGRES, CONNECTOR_REDIS - required, must not be CONNECTOR_UNSPECIFIED
  string connection_string = 3; // Required: database connection string
  AdapterOptions options = 4; // Optional: connector-specific options
}

message AdapterOptions {
  // Connector-specific options are stored as a map
  // Each connector can define its own options
  // Examples:
  // - PostgreSQL: max_connections, ssl_mode, etc.
  // - MySQL: max_connections, charset, etc.
  // - Redis: db, password, etc.
  map<string, string> options = 1;
}

// Query Definition
message Query {
  string name = 1; // e.g., "get-user" - must be lower-kebab-case or lower_snake_case, required
  repeated string use = 2; // References to adapter names - required, must have at least one
  string statement = 3; // SQL or command string - required
  string description = 4; // Required
  repeated Input inputs = 5;
  repeated Data data = 6;
}

// Input Parameter Definition
message Input {
  string name = 1; // Required
  bool optional = 2; // Marked by '?' in DSL
  Primitive type = 3; // e.g., "string", "int" - required
  string description = 4;
  string default_value = 5; // Stored as string, parsed at runtime based on type
}

// Output Data Field Definition
message Data {
  string name = 1; // Required
  bool optional = 2; // Marked by '?' in DSL
  Primitive type = 3; // e.g., "int", "string" - required
  string description = 4;
  string map_to = 5; // e.g., "user.id"
}
